Las imágenes no pueden ser más grandes que sus contenedores

--- a/themes/daetsam/css/global.css
+++ b/themes/daetsam/css/global.css
@@ -294,6 +294,14 @@ textarea:active {
   color: #999;
 }
 
+/* ======================================================================
+   Imágenes
+   (Sobreescribe 'omega/alpha/css/alpha-alpha.css')
+   ====================================================================== */
+img {
+  max-width:100%;
+}
+
 
 /* ######################################################################
    Sección 'Header'
