Ajustes en css.
Ajustes de etiquetas de títulos y líneas horizontales.
Ajustes de líneas de cabeceras de apartado.
Nueva clase para listas sin marcadores.

--- a/themes/daetsam/css/daetsam-alpha-default-normal.css
+++ b/themes/daetsam/css/daetsam-alpha-default-normal.css
@@ -139,8 +139,8 @@ img.logos-redes-sociales {
 
 .reg-header-top h1 {
   font-size: 7.538em; /* = 98px */
-  line-height: .9388; /* = 92px */
-  padding-bottom: 0.0306em; /* = 3px */
+  line-height: .877551; /* = 86px */
+  padding-bottom: .030612em; /* = 3px */
 }
 
 
