--- a/themes/daetsam/css/daetsam-alpha-default-wide.css
+++ b/themes/daetsam/css/daetsam-alpha-default-wide.css
@@ -27,8 +27,8 @@
 
 .reg-header-top h1 {
   font-size: 9.538em; /* = 124px */
-  line-height: .9435; /* = 117px */
-  padding-bottom: 0.03226em; /* = 4px */
+  line-height: .887096; /* = 110px */
+  padding-bottom: .024193em; /* = 3px */
 }
 
 /* ----------------------------------------------------------------------
