--- a/themes/daetsam/css/global.css
+++ b/themes/daetsam/css/global.css
@@ -422,18 +422,21 @@ body .reg-menu h2.block-title { /* Ajusta la separación entre los elementos de 
 .reg-search-bar {
   margin-top: 1.5em; /* = 18px */
   margin-bottom: 1em; /* = 12px */
-  overflow: hidden; /* Para poder poner la barra de búsqueda en la misma línea que los enlaces de redes sociales */
+  overflow: hidden;
 }
 
 .redes-sociales {
+  float:left;
   margin-left: 2px;
-  float: left; /* Para poder poner la barra de búsqueda en la misma línea que los enlaces de redes sociales */
+}
+
+.redes-sociales a {
+  margin-left:9px;
 }
 
 img.logos-redes-sociales {
   width: 23px;
   height: auto;
-  margin-right: 11px;
 }
 
 .reg-search-bar input[type="text"] {
@@ -492,6 +495,14 @@ img.logos-redes-sociales {
 
 .reg-menu-bottom-top hr { /* Oculta la línea superior de la franja */
   display: none;
+}
+
+/* ----------------------------------------------------------------------
+   Región 'Menu Bottom Second'
+   ---------------------------------------------------------------------- */
+
+.reg-menu-bottom-second {
+  text-align:right;
 }
 
 /* ----------------------------------------------------------------------
