--- a/themes/daetsam/css/global.css
+++ b/themes/daetsam/css/global.css
@@ -634,10 +634,57 @@ li.alpha { /* Evita que aparezcan botones de lista en las vistas, en la versión
 /* ----------------------------------------------------------------------
    Región 'Content' - estilos específicos para págians concretas
    ---------------------------------------------------------------------- */
-.imageSlider {
+   
+/*
+   Estilos para el plugin 'daetsam-slider'
+   Muestra contenido como una galería de imágenes.
+*/
+.daetsam-slider {
   margin:10px 0;
-  height:150px;
 }
+.daetsam-slider ul {
+  list-style:none;
+  padding:0;
+  margin:0 0 10px 0;
+  position:relative;
+  height:14em;
+}
+.daetsam-slider li {
+  position:absolute;
+  top:0;
+  left:0;
+  height:100%;
+}
+
+
+@media all and (min-width:730px) {
+  .daetsam-slider ul {
+    height:14em;
+  }
+}
+.daetsam-slider ul.bullet-list {
+  position:static;
+  height:auto;
+  list-style:none;
+}
+.daetsam-slider ul.bullet-list li {
+  position:static;
+  display:inline-block;
+  height:4px;
+  width:20px;
+  margin:0 3px 0 0;
+}
+.daetsam-slider ul.bullet-list a {
+  display:block;
+  width:100%;
+  height:100%;
+  background:#000;
+}
+.daetsam-slider ul.bullet-list li.active-trail a,
+.daetsam-slider ul.bullet-list a:hover {
+  background:#999;
+}
+
 
 
 /* ######################################################################
