--- a/themes/daetsam/css/global.css
+++ b/themes/daetsam/css/global.css
@@ -706,21 +706,16 @@ dl.statistics dt.statistcs-highlight {
   padding:0;
   margin:0 0 10px 0;
   position:relative;
-  height:14em;
 }
 .daetsam-slider li {
-  position:absolute;
   top:0;
   left:0;
   height:100%;
 }
-
-
-@media all and (min-width:730px) {
-  .daetsam-slider ul {
-    height:14em;
-  }
+.daetsam-slider li.changing {
+  position:absolute;
 }
+
 .daetsam-slider ul.bullet-list {
   position:static;
   height:auto;
