Logo responsive con el módulo resp_img

--- a/themes/daetsam/css/global.css
+++ b/themes/daetsam/css/global.css
@@ -363,7 +363,7 @@ img {
 }
 
 .reg-logo img {
-  width: 100%;
+  /*width: 100%;*/
 }
 
 /* ----------------------------------------------------------------------
