--- a/themes/daetsam/css/daetsam-alpha-default-normal.css
+++ b/themes/daetsam/css/daetsam-alpha-default-normal.css
@@ -81,7 +81,7 @@ footer.submitted {
    ---------------------------------------------------------------------- */
 
 .reg-logo img { /* Ancho imagen logo = 126px */
-  width: 90%;
+  /*width: 90%;*/
 }
 
 /* ----------------------------------------------------------------------
