Texto inferior centrado en versión móvil

--- a/themes/daetsam/css/daetsam-alpha-default.css
+++ b/themes/daetsam/css/daetsam-alpha-default.css
@@ -89,6 +89,9 @@ img.logos-redes-sociales {
 /* ----------------------------------------------------------------------
    Regi—n 'Footer First'
    ---------------------------------------------------------------------- */
+.reg-footer-first {
+  text-align:center;
+}
 
 .reg-footer-first p {
   text-align: left;
