Issue 24: Margen en el logo inferior, enlaces de pie de página, Alineación de texto encima de la cabecera
Issue 24: https://github.com/daetsam/daetsam/issues/24 Margen en el logo
inferior, enlaces de pie de página, Alineación de texto encima de la
cabecera

--- a/themes/daetsam/css/daetsam-alpha-default.css
+++ b/themes/daetsam/css/daetsam-alpha-default.css
@@ -65,7 +65,7 @@ img.logos-redes-sociales {
    Regi—n 'Menu Bottom Second'
    ---------------------------------------------------------------------- */
 
-.reg-menu-bottom-second p {
+.reg-menu-bottom-second {
   text-align: right;
 }
 
@@ -90,11 +90,7 @@ img.logos-redes-sociales {
    Regi—n 'Footer First'
    ---------------------------------------------------------------------- */
 .reg-footer-first {
-  text-align:center;
-}
-
-.reg-footer-first p {
-  text-align: left;
+  text-align:left;
 }
 
 /* ----------------------------------------------------------------------
