--- a/themes/daetsam/css/daetsam-alpha-default.css
+++ b/themes/daetsam/css/daetsam-alpha-default.css
@@ -78,6 +78,21 @@ img.logos-redes-sociales {
 }
 
 
+
+/* ######################################################################
+   Sección 'Content'
+   ###################################################################### */
+
+/* ======================================================================
+   Zona 'Content'
+   ====================================================================== */
+
+/* ----------------------------------------------------------------------
+   Región 'Content'
+   ---------------------------------------------------------------------- */
+
+
+
 /* ######################################################################
    Secci—n 'Footer'
    ###################################################################### */
@@ -104,6 +119,6 @@ img.logos-redes-sociales {
 }
 
 .reg-footer-second img {
-  width: 100%;
+  /*width: 100%;*/
   float: right;
 }
