--- a/themes/daetsam/css/global.css
+++ b/themes/daetsam/css/global.css
@@ -638,11 +638,11 @@ li.alpha { /* Evita que aparezcan botones de lista en las vistas, en la versión
    Región 'Content'
    ---------------------------------------------------------------------- */
 .lista-con-linea li {
-   	margin-bottom:10px;
-	border-bottom:#000 3px solid;
+  margin-bottom:10px;
+  border-bottom:#000 3px solid;
 }
 .lista-con-linea li h2 {
-  margin:0;
+  margin-top:0;
 }
 @media all and (max-width:730px) {
 .reg-content .grid-1,
