--- a/themes/daetsam/css/global.css
+++ b/themes/daetsam/css/global.css
@@ -465,6 +465,13 @@ img.logos-redes-sociales {
   margin: 0;
 }
 
+.reg-search-bar .block-45 {
+  text-transform:lowercase;
+  font-weight:bold;
+  padding-top:6px;
+  clear:both;
+}
+
 /* ======================================================================
    Zona 'Menu Bottom'
    ====================================================================== */
@@ -637,11 +644,11 @@ li.alpha { /* Evita que aparezcan botones de lista en las vistas, en la versión
 /* ----------------------------------------------------------------------
    Región 'Content'
    ---------------------------------------------------------------------- */
-.lista-con-linea li {
+.lista-con-linea ul li {
   margin-bottom:10px;
   border-bottom:#000 3px solid;
 }
-.lista-con-linea li h2 {
+.lista-con-linea ul li h2 {
   margin-top:0;
 }
 @media all and (max-width:730px) {
