--- a/themes/daetsam/css/daetsam-alpha-default.css
+++ b/themes/daetsam/css/daetsam-alpha-default.css
@@ -90,7 +90,10 @@ img.logos-redes-sociales {
 /* ----------------------------------------------------------------------
    Región 'Content'
    ---------------------------------------------------------------------- */
-
+.linea-inferior-fina {
+  margin-bottom:10px;
+  border-bottom:#000 3px solid;
+}
 
 
 /* ######################################################################
