región con un pixel

--- a/themes/daetsam/css/global.css
+++ b/themes/daetsam/css/global.css
@@ -338,6 +338,10 @@ img {
   margin:0;
 }
 
+.region {
+  min-height:1px;
+}
+
 /* ######################################################################
    Sección 'Header'
    ###################################################################### */
