--- a/themes/daetsam/css/daetsam-alpha-default.css
+++ b/themes/daetsam/css/daetsam-alpha-default.css
@@ -1,5 +1,44 @@
 /* This file will hold styles for all layouts using the alpha grid (i.e. not the mobile layout). */
 
+/* ######################################################################
+   General
+   ###################################################################### */
+
+/* ======================================================================
+   Texto
+   ====================================================================== */
+
+h1 {
+  font-size: 1.15384em; /* = 15px */
+}
+
+h2 {
+  font-size: 1.0769em; /* = 14px */
+}
+
+h2.block-title {
+  font-size: 1.0769em; /* = 14px */
+}
+
+h2.node-title {
+  font-size: 1.0769em; /* = 14px */
+}
+
+h3 {
+  font-size: 1.0769em; /* = 14px */
+}
+
+h4 {
+  font-size: 1.0769em; /* = 14px */
+}
+
+h5 {
+  font-size: 1em; /* = 13px */
+}
+
+h6 {
+  font-size: 1em; /* = 13px */
+}
 
 /* ######################################################################
    Secci—n 'Header'
